# help

./: CMakeLists.txt  Dockerfile
data/: database.txt
src/: Add.cpp  Add.h  App.cpp  App.h  DataBaseServices.cpp  DataBaseServices.h  FileDataBase.cpp  FileDataBase.h  ICommand.h  IDataBase.h  IInput.h  IOutput.h  Input.cpp  Input.h  Movie.cpp  Movie.h  Output.cpp  Output.h  ParseInput.cpp  ParseInput.h  RecommendCommand.cpp  RecommendCommand.h  Tests.cpp  User.cpp  User.h  complie  main.cpp
src/tests/: Cmakelists.txt  DataBaseServicesTest.cpp  RecommendCommandTest.cpp
